[dbus-string] Sync up UNICODE_VALID with glib, add documentation

See https://bugzilla.gnome.org/show_bug.cgi?id=107427 for rationale
behind the first change.

The documentation was derived from an IRC conversation with
Behdad Esfahbod.